# ensure-requirements-specified

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  ensure_requirements_specified.py  setup.cfg
tests/: main_test.py
tests/data/: correct-one.txt  incorrect-one.txt
