[metadata]
name = ensure_requirements_specified
version = 1.1.0
description = Check that all requirements files have versions specified
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/buzanovn/ensure-requirements-specified
author = Nikita Buzanov
author_email = github@buzanovn.ru
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
py_modules = ensure_requirements_specified
install_requires =
    pip>=18.0
    setuptools>=59.6.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    ensure-requirements-specified = ensure_requirements_specified:main
